<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/btn_share_desc"
            android:src="@drawable/ic_share_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_favorite"
            app:layout_constraintBottom_toBottomOf="@id/btn_favorite"/>

        <CheckBox
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/sl_favourite_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/user_name"
            android:textSize="24sp"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_username"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username"/>

        <TextView
            android:id="@+id/tv_repo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_followers"
            app:layout_constraintTop_toBottomOf="@id/divider_top"/>

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/tv_repo"
            app:layout_constraintEnd_toStartOf="@id/tv_following"
            app:layout_constraintTop_toTopOf="@id/tv_repo" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@id/tv_repo"
            app:layout_constraintStart_toEndOf="@id/tv_followers"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/repo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repositories"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_repo"
            app:layout_constraintEnd_toStartOf="@id/followers"/>

        <TextView
            android:id="@+id/followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/repo"
            app:layout_constraintEnd_toStartOf="@id/following"
            app:layout_constraintTop_toTopOf="@id/repo"/>

        <TextView
            android:id="@+id/following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/followers"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repo"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/user_location"
            android:gravity="center_vertical"
            android:drawablePadding="4dp"
            android:visibility="invisible"
            app:drawableStartCompat="@drawable/ic_location_24"
            app:layout_constraintTop_toBottomOf="@id/divider_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_company"
            android:gravity="center_vertical"
            android:drawablePadding="4dp"
            android:visibility="invisible"
            app:drawableStartCompat="@drawable/ic_company_24"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>