<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.UsersFragment">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/githubusers_logo"
        android:contentDescription="@string/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_search"
        app:layout_constraintBottom_toBottomOf="@id/btn_search"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_app_logo"
        app:layout_constraintTop_toTopOf="@id/iv_app_logo"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_logo"/>

    <CheckBox
        android:id="@+id/btn_app_theme"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:button="@drawable/sl_app_theme"
        android:contentDescription="@string/btn_change_theme_desc"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        app:layout_constraintTop_toTopOf="@id/btn_search"
        app:layout_constraintBottom_toBottomOf="@id/btn_search" />

    <Button
        android:id="@+id/btn_search"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/btn_search_desc"
        app:icon="@drawable/ic_search_24"
        app:iconSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>